--- a/wp-content/themes/tutannet/style.css
+++ b/wp-content/themes/tutannet/style.css
@@ -3,7 +3,7 @@ Theme Name: TuTanNet
 Theme URI: http://chuatutan.net
 Author: Vo Xuan Vinh
 Author URI: vxvpastime@gmail.com
-Version: 1.0.0-alpha.1
+Version: 1.0.0-alpha.2
 Build: 1.0 Nightly 20150809
 GitHub Theme URI: https://github.com/vxvinh/tutannet
 GitHub Branch: master
@@ -30,7 +30,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	font-style: inherit;
 	font-weight: inherit;
 	margin: 0;
-	outline: 0;
+	outline: 0 !important;
 	padding: 0;
 	vertical-align: baseline;
 }
@@ -81,12 +81,12 @@ blockquote, q {
 }
 
 a:focus {
-	outline:0;
+	outline:0 !important;
 }
 
 a:hover, 
 a:active {
-	outline: 0;
+	outline: 0 !important;
 }
 
 a img {
@@ -692,6 +692,8 @@ Media
 
 .site-main {
 	background-color: #fff;
+	position: relative;
+	z-index: 0;
 }
 
 .site-main .gallery {
@@ -993,30 +995,67 @@ body.boxed-layout {
 		margin-bottom: 0;
 	}
 	
-	#login_wrapper .login_tool button {
+	#login_wrapper .login_tool button, 
+	#login_wrapper .login_tool .logout_btn {
 		border: none;
 		display: block;
 		background-color: transparent;
 		color: #fff;
 	}
 	
-	#login_wrapper .login_tool button:hover {
+	#login_wrapper .login_tool button:hover, 
+	#login_wrapper .login_tool .logout_btn:hover {
 		color: #fff;
 		background-color: transparent;
 	}
 	
-	#login_wrapper .login_tool button:active, #login_wrapper .login_tool button.active {
+	#login_wrapper .login_tool button:active, 
+	#login_wrapper .login_tool button.active {
 		background-color: transparent;
 		box-shadow: none;
 	}
 	
-	#login_wrapper .login_tool button span {
+	#login_wrapper .login_tool button span,
+	#login_wrapper .login_tool .logout_btn span {
 		display: block;
 		font-size: 14px;
 	}
 	
-	#login_wrapper .login_tool button span i {
+	#login_wrapper .login_tool button span i,
+	#login_wrapper .login_tool .logout_btn span i {
 		font-size: 17px;
+	}
+	
+	#profileform {
+		text-align: center;
+		margin-top: 3em;
+	}
+	
+	#profileform .profile_avatar {
+		display: inline-block;
+		border-radius: 500px;
+		border: 2px solid #fff;
+	}
+
+	#profileform .profile_avatar .avatar {
+		max-width: 64px !important;
+		max-height: 64px !important;
+		min-width: 64px !important;
+		min-height: 64px !important;
+		position: relative !important;
+		border-radius: 500px !important;
+	}
+	
+	#profileform h2 {
+		font-weight: bold;
+		margin-top: 10px;
+		font-size: 20px;
+		color: #fff;
+	}
+	
+	#profileform .user_role {
+		text-transform: capitalize;
+		color: #fff;
 	}
 	
 	@media only screen and (min-width: 992px) {
@@ -1028,7 +1067,6 @@ body.boxed-layout {
 			font: 24px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 			text-align: center;
 			letter-spacing: 1px;
-			margin-bottom: 30px;
 			margin-top: 20px;
 		}
 		#loginform, #registerform, #lostpasswordform, #profileform {
@@ -1061,6 +1099,33 @@ body.boxed-layout {
 		#login_wrapper .login_tool button span i {
 			font-size: 14px;
 		}
+		#profileform {
+			margin-top: 0;
+		}
+		#profileform .profile_avatar {
+			border-color: #cacaca;
+			margin-top: 20px;
+		}
+		#profileform .profile_avatar .avatar {
+			max-width: 96px !important;
+			max-height: 96px !important;
+			min-width: 96px !important;
+			min-height: 96px !important;
+		}
+		#profileform h2 {
+			color: #000;
+		}
+		#profileform .user_role {
+			color: #000;
+		}
+		#profileform .nav a {
+			display: inline-block;
+			padding: 40px 20px 10px 20px;
+		}
+		#profileform .nav a span {
+			display: block;
+			width: auto;
+		}
 		.login_close {
 			position: absolute;
 			right: 3%;
@@ -1087,6 +1152,8 @@ body.boxed-layout {
 	#primary {
 		float: left;
 		width: 100%;
+		position: relative;
+		z-index: -1;
 	}
 	
 		
@@ -1100,7 +1167,7 @@ body.boxed-layout {
 	
 	.section-name {
 		text-transform: capitalize;
-		font: 56px Georgia, "Times New Roman", Times, serif;
+		font: 28px Georgia, "Times New Roman", Times, serif;
 		text-align: center;
 		letter-spacing: 2px;
 		margin: 0;
@@ -1124,7 +1191,7 @@ body.boxed-layout {
 	
 	.post-desc-wrapper {
 		margin-bottom: 40px;
-		width: 90%;
+		width: 100%;
 		margin: 0 0 20px 0;
 	}
 	
@@ -1158,6 +1225,7 @@ body.boxed-layout {
 	
 	.posted-on.today {
 		color: #F38A6C;
+		font-weight: bold;
 	}
 	
 	.posted-on.new {
@@ -1180,6 +1248,18 @@ body.boxed-layout {
 	}
 	
 	
+	@media only screen and (min-width: 992px) {
+		.section-name {
+			text-transform: capitalize;
+			font: 56px Georgia, "Times New Roman", Times, serif;
+			text-align: center;
+			letter-spacing: 2px;
+			margin: 0;
+			margin-bottom: 60px;
+			color: rgb(250, 218, 94);
+			z-index: 0;
+		}	
+	}
 		
 /*--------------------------------------------------------------
 	Block Overview (1st) css 
@@ -1208,7 +1288,9 @@ body.boxed-layout {
 	}
 	
 	
-	
+	@media only screen and (min-width: 992px) {
+		
+	}
 	
 /*--------------------------------------------------------------
 	Block News css 
@@ -1221,12 +1303,13 @@ body.boxed-layout {
 		list-style-type: none;
 	}
 	
-	.block-news .single-post:hover {
+	.block-news .single-post, .gallery_post_img_wrapper {
+		margin-bottom: 20px;
 		
 	}
 	
 	.block-news .featured-post {
-		padding: 0;
+		padding: 0 15px;
 		text-align: center;
 	}
 	
@@ -1238,10 +1321,92 @@ body.boxed-layout {
 		margin-top: 30px;
 	}
 	
-	.block-news .featured-post .post-desc-wrapper {
+	.block-news .featured-post .post-desc-wrapper, .block-news .single-post .post-desc-wrapper {
 		text-align: center;
-		width: 100%;
 		padding: 0 10% 10%;
+	}
+	
+	.gallery_post_img_wrapper {
+		padding: 0 !important;	
+	}
+		
+	.gallery_post_img_wrapper img {
+		width: 100%;
+	}
+	
+	.gallery_post_img_left_wrapper, .gallery_post_img_right_wrapper {
+		padding: 0 !important;
+		overflow: hidden;
+	}
+	
+	.gallery_post_img {
+		padding: 0 !important;
+		overflow: hidden;
+	}
+	
+	.gallery_post_img_left_wrapper img {
+		-ms-transform: scale(1);
+		-webkit-transform: scale(1);
+		transform: scale(1);
+		-webkit-transition: all 2s;
+		-o-transition: all 2s;
+		transition: all 2s;
+		height: 100%;
+	}
+	
+	.gallery_post_img_left_wrapper img:hover {
+		-ms-transform: scale(1.5);
+		-webkit-transform: scale(1.5);
+		transform: scale(1.5);
+		-webkit-transition: all 2s;
+		-o-transition: all 2s;
+		transition: all 2s;
+	}
+	
+	.gallery_post_img_right_wrapper img {
+		height: 100%;
+		min-width: 200%;
+		-webkit-transition: all 2s;
+		-o-transition: all 2s;
+		transition: all 2s;
+	}
+	
+	.gallery_post_img_right_wrapper img:hover {
+		-ms-transform: translateX(-50%);
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+		-webkit-transition: all 2s;
+		-o-transition: all 2s;
+		transition: all 2s;
+	}
+	
+	@media only screen and (min-width: 992px) { 
+		.block-news .single-post .post-desc-wrapper {
+			margin: 30px 0 20px 0;
+			text-align: left;
+			padding: 0;
+		}
+		.gallery_post_img_wrapper {
+			padding-left: 10px !important;
+		}
+		.gallery_post_img_right_wrapper img {
+			width: 100%;
+			min-width: 100%;
+			height: auto;
+		}
+		.gallery_post_img_right_wrapper img {
+			-ms-transform: scale(1);
+			-webkit-transform: scale(1);
+			transform: scale(1); 
+		}
+		.gallery_post_img_right_wrapper img:hover {
+			-ms-transform: scale(1.5);
+			-webkit-transform: scale(1.5);
+			transform: scale(1.5);
+			-webkit-transition: all 2s;
+			-o-transition: all 2s;
+			transition: all 2s;
+		}
 	}
 	
 		
