--- a/wp-content/themes/tutannet/style.css
+++ b/wp-content/themes/tutannet/style.css
@@ -3,8 +3,8 @@ Theme Name: TuTanNet
 Theme URI: http://chuatutan.net
 Author: Vo Xuan Vinh
 Author URI: vxvpastime@gmail.com
-Version: 1.0.0-alpha.1
-Build: 1.0 Nightly 20150807
+Version: 1.0.0-alpha.2
+Build: 1.0 Nightly 20150809
 GitHub Theme URI: https://github.com/vxvinh/tutannet
 GitHub Branch: master
 */
@@ -30,7 +30,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	font-style: inherit;
 	font-weight: inherit;
 	margin: 0;
-	outline: 0;
+	outline: 0 !important;
 	padding: 0;
 	vertical-align: baseline;
 }
@@ -81,12 +81,12 @@ blockquote, q {
 }
 
 a:focus {
-	outline:0;
+	outline:0 !important;
 }
 
 a:hover, 
 a:active {
-	outline: 0;
+	outline: 0 !important;
 }
 
 a img {
@@ -625,7 +625,7 @@ Functions
 --------------------------------------------------------------*/
 
 .is-disabled {
-	display: none;
+	display: none !important;
 }
 
 .disable-select {
@@ -634,6 +634,10 @@ Functions
   -ms-user-select: none;      
   user-select: none;
   cursor: default;
+}
+
+.is-blurred {
+  filter: blur(20px);
 }
 
 /*--------------------------------------------------------------
@@ -684,6 +688,12 @@ Media
 
 .wp-caption .wp-caption-text {
 	margin: 10px 0;
+}
+
+.site-main {
+	background-color: #fff;
+	position: relative;
+	z-index: 0;
 }
 
 .site-main .gallery {
@@ -801,12 +811,13 @@ body.boxed-layout {
 	 Search css 
 	--------------------------------------------------------------*/
 	
-	#searchform, #searchtagcloudform {
+	#searchform {
 		position: relative;
-		padding-top: 10em;
+		padding-top: 5em;
 	}
 	
 	#searchtagcloudform {
+		position: relative;
 		padding-top: 0;
 		overflow: hidden;
 	}
@@ -879,42 +890,98 @@ body.boxed-layout {
 	
 	#search_tool {
 		text-align: center;
+		position: absolute;
+		bottom: 2%;
+		width: 100%
 	}
 	
 	#search_tool button {
 		border: none;
+		display: inline-block;
+		position: relative;
+		background-color: transparent;
+		color: #fff;
 	}
 	
-	#search_tool  button span {
+	#search_tool button:hover {
+		color: #fff;
+		background-color: transparent;
+	}
+	
+	#search_tool button span {
 		display: block;
-		font-size: 11px;
+		font-size: 14px;
 	}
 	
-	#search_tool  button span i {
-		font-size: 14px;
+	#search_tool button span i {
+		font-size: 17px;
+	}
+		
+	#search_tool button:active, #search_tool button.active {
+		background-color: transparent;
+		box-shadow: none;
+	}
+	
+	@media only screen and (min-width: 992px) {
+		#searchform {
+			position: relative;
+			padding-top: 10em;
+		}
+		#searchform	button {
+			background-color: #fff;
+			color: #000;
+		}
+		
+		#search_tool button {
+			border: none;
+			display: block;
+			background-color: #fff;
+			color: #000;
+		}
+		#search_tool button:hover {
+			color: #000;
+			background-color: #eee;
+		}
+		#search_tool button span {
+			display: block;
+			font-size: 11px;
+		}
+		#search_tool button span i {
+			font-size: 14px;
+		}
+		
 	}
 	
 	
 /*--------------------------------------------------------------
 	Login css 
-	--------------------------------------------------------------*/
+	--------------------------------------------------------------*/	
 	#login_wrapper {
-		padding-top: 5em;
+		padding-top: 0.7em;
 	}
 	
 	#login_wrapper h2 {
 		text-transform: capitalize;
-		font: 24px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+		font: 16px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 		text-align: center;
 		letter-spacing: 1px;
-		margin-bottom: 30px;
+		margin-bottom: 10px;
+		margin-top: 0;
+	}
+	
+	#login_wrapper button {
+		width: 100%;
+	}
+	
+	#login_wrapper .login_tool button {
+		width: auto;
 	}
 	
 	#loginform, #registerform, #lostpasswordform, #profileform {
 		position: relative;
-		background-color: #fff;
+		background-color: transparent;
 		height: 80%;
-		padding: 40px;
+		padding: 20px;
 		padding-top: 10px;
 	}
 	
@@ -924,20 +991,150 @@ body.boxed-layout {
 	
 	.login_tool {
 		text-align: center;
+		margin-top: 10px;
+		margin-bottom: 0;
 	}
 	
-	.login_tool button {
+	#login_wrapper .login_tool button, 
+	#login_wrapper .login_tool .logout_btn {
 		border: none;
 		display: block;
+		background-color: transparent;
+		color: #fff;
 	}
 	
-	.login_tool button span {
+	#login_wrapper .login_tool button:hover, 
+	#login_wrapper .login_tool .logout_btn:hover {
+		color: #fff;
+		background-color: transparent;
+	}
+	
+	#login_wrapper .login_tool button:active, 
+	#login_wrapper .login_tool button.active {
+		background-color: transparent;
+		box-shadow: none;
+	}
+	
+	#login_wrapper .login_tool button span,
+	#login_wrapper .login_tool .logout_btn span {
 		display: block;
-		font-size: 11px;
+		font-size: 14px;
 	}
 	
-	.login_tool button span i {
-		font-size: 14px;
+	#login_wrapper .login_tool button span i,
+	#login_wrapper .login_tool .logout_btn span i {
+		font-size: 17px;
+	}
+	
+	#profileform {
+		text-align: center;
+		margin-top: 3em;
+	}
+	
+	#profileform .profile_avatar {
+		display: inline-block;
+		border-radius: 500px;
+		border: 2px solid #fff;
+	}
+
+	#profileform .profile_avatar .avatar {
+		max-width: 64px !important;
+		max-height: 64px !important;
+		min-width: 64px !important;
+		min-height: 64px !important;
+		position: relative !important;
+		border-radius: 500px !important;
+	}
+	
+	#profileform h2 {
+		font-weight: bold;
+		margin-top: 10px;
+		font-size: 20px;
+		color: #fff;
+	}
+	
+	#profileform .user_role {
+		text-transform: capitalize;
+		color: #fff;
+	}
+	
+	@media only screen and (min-width: 992px) {
+		#login_wrapper {
+			padding-top: 5em;
+		}
+		#login_wrapper h2 {
+			text-transform: capitalize;
+			font: 24px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+			text-align: center;
+			letter-spacing: 1px;
+			margin-top: 20px;
+		}
+		#loginform, #registerform, #lostpasswordform, #profileform {
+			position: relative;
+			background-color: #fff;
+			height: 80%;
+			padding: 10px 40px 40px 40px;
+		}
+		#login_wrapper button {
+			width: auto;
+		}
+		.login_tool {
+			text-align: center;
+			margin-top: 40px;
+			margin-bottom: 0;
+		}
+		#login_wrapper .login_tool button {
+			border: none;
+			display: block;
+			background-color: #fff;
+			color: #000;
+		}
+		#login_wrapper .login_tool button:hover {
+			color: #000;
+		}
+		#login_wrapper .login_tool button span {
+			display: block;
+			font-size: 11px;
+		}
+		#login_wrapper .login_tool button span i {
+			font-size: 14px;
+		}
+		#profileform {
+			margin-top: 0;
+		}
+		#profileform .profile_avatar {
+			border-color: #cacaca;
+			margin-top: 20px;
+		}
+		#profileform .profile_avatar .avatar {
+			max-width: 96px !important;
+			max-height: 96px !important;
+			min-width: 96px !important;
+			min-height: 96px !important;
+		}
+		#profileform h2 {
+			color: #000;
+		}
+		#profileform .user_role {
+			color: #000;
+		}
+		#profileform .nav a {
+			display: inline-block;
+			padding: 40px 20px 10px 20px;
+		}
+		#profileform .nav a span {
+			display: block;
+			width: auto;
+		}
+		.login_close {
+			position: absolute;
+			right: 3%;
+			top: 3%;
+			color: #ddd;
+		}
+		.login_close:hover {
+			color: #D7564C;
+		}
 	}
 	
 
@@ -955,6 +1152,8 @@ body.boxed-layout {
 	#primary {
 		float: left;
 		width: 100%;
+		position: relative;
+		z-index: -1;
 	}
 	
 		
@@ -966,15 +1165,15 @@ body.boxed-layout {
 		padding: 4em 0;
 	}
 	
-	
-	.block-cat-name {
-		font: normal normal 18px "Times New Roman", Times, serif;
-		line-height: 16px;
-		text-transform: uppercase;
-		color: #D2B55B;
+	.section-name {
+		text-transform: capitalize;
+		font: 28px Georgia, "Times New Roman", Times, serif;
+		text-align: center;
 		letter-spacing: 2px;
 		margin: 0;
-		margin-bottom: 10px;
+		margin-bottom: 60px;
+		color: rgb(250, 218, 94);
+		z-index: 0;
 	}
 	
 	.post-image .big-image-overlay, .post-image .big-title-overlay{
@@ -992,12 +1191,12 @@ body.boxed-layout {
 	
 	.post-desc-wrapper {
 		margin-bottom: 40px;
-		width: 90%;
+		width: 100%;
 		margin: 0 0 20px 0;
 	}
 	
 	.post-title {
-		font: normal normal 15px Georgia, "Times New Roman", Times, serif;
+		font: normal normal 20px Georgia, "Times New Roman", Times, serif;
 		letter-spacing: 1px;
 		margin: 0;
 	}
@@ -1026,6 +1225,7 @@ body.boxed-layout {
 	
 	.posted-on.today {
 		color: #F38A6C;
+		font-weight: bold;
 	}
 	
 	.posted-on.new {
@@ -1048,6 +1248,18 @@ body.boxed-layout {
 	}
 	
 	
+	@media only screen and (min-width: 992px) {
+		.section-name {
+			text-transform: capitalize;
+			font: 56px Georgia, "Times New Roman", Times, serif;
+			text-align: center;
+			letter-spacing: 2px;
+			margin: 0;
+			margin-bottom: 60px;
+			color: rgb(250, 218, 94);
+			z-index: 0;
+		}	
+	}
 		
 /*--------------------------------------------------------------
 	Block Overview (1st) css 
@@ -1075,13 +1287,136 @@ body.boxed-layout {
 		margin-top: -50px;
 	}
 	
+	
+	@media only screen and (min-width: 992px) {
+		
+	}
+	
+/*--------------------------------------------------------------
+	Block News css 
+	--------------------------------------------------------------*/	
+	.block-news {
+		
+	}	
+	
+	.block-news li {
+		list-style-type: none;
+	}
+	
+	.block-news .single-post, .gallery_post_img_wrapper {
+		margin-bottom: 20px;
+		
+	}
+	
+	.block-news .featured-post {
+		padding: 0 15px;
+		text-align: center;
+	}
+	
+	.block-news img {
+		min-width: 100%;
+	}
+	
+	.block-news .post-desc-wrapper {
+		margin-top: 30px;
+	}
+	
+	.block-news .featured-post .post-desc-wrapper, .block-news .single-post .post-desc-wrapper {
+		text-align: center;
+		padding: 0 10% 10%;
+	}
+	
+	.gallery_post_img_wrapper {
+		padding: 0 !important;	
+	}
+		
+	.gallery_post_img_wrapper img {
+		width: 100%;
+	}
+	
+	.gallery_post_img_left_wrapper, .gallery_post_img_right_wrapper {
+		padding: 0 !important;
+		overflow: hidden;
+	}
+	
+	.gallery_post_img {
+		padding: 0 !important;
+		overflow: hidden;
+	}
+	
+	.gallery_post_img_left_wrapper img {
+		-ms-transform: scale(1);
+		-webkit-transform: scale(1);
+		transform: scale(1);
+		-webkit-transition: all 2s;
+		-o-transition: all 2s;
+		transition: all 2s;
+		height: 100%;
+	}
+	
+	.gallery_post_img_left_wrapper img:hover {
+		-ms-transform: scale(1.5);
+		-webkit-transform: scale(1.5);
+		transform: scale(1.5);
+		-webkit-transition: all 2s;
+		-o-transition: all 2s;
+		transition: all 2s;
+	}
+	
+	.gallery_post_img_right_wrapper img {
+		height: 100%;
+		min-width: 200%;
+		-webkit-transition: all 2s;
+		-o-transition: all 2s;
+		transition: all 2s;
+	}
+	
+	.gallery_post_img_right_wrapper img:hover {
+		-ms-transform: translateX(-50%);
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+		-webkit-transition: all 2s;
+		-o-transition: all 2s;
+		transition: all 2s;
+	}
+	
+	@media only screen and (min-width: 992px) { 
+		.block-news .single-post .post-desc-wrapper {
+			margin: 30px 0 20px 0;
+			text-align: left;
+			padding: 0;
+		}
+		.gallery_post_img_wrapper {
+			padding-left: 10px !important;
+		}
+		.gallery_post_img_right_wrapper img {
+			width: 100%;
+			min-width: 100%;
+			height: auto;
+		}
+		.gallery_post_img_right_wrapper img {
+			-ms-transform: scale(1);
+			-webkit-transform: scale(1);
+			transform: scale(1); 
+		}
+		.gallery_post_img_right_wrapper img:hover {
+			-ms-transform: scale(1.5);
+			-webkit-transform: scale(1.5);
+			transform: scale(1.5);
+			-webkit-transition: all 2s;
+			-o-transition: all 2s;
+			transition: all 2s;
+		}
+	}
+	
+		
 		
 	
 /*--------------------------------------------------------------
 	first block css 
 	--------------------------------------------------------------*/
 	.first-block {
-
+		
 	}
 	
 	.first-block .leftposts-wrapper {
