--- a/wp-content/themes/tutannet/tech/site-header/site-header.css
+++ b/wp-content/themes/tutannet/tech/site-header/site-header.css
@@ -102,7 +102,7 @@ Navigation
   }
   #site-logo.is-hidden.slide-in {
     /* slide in when the secondary navigation gets fixed */
-    left: 5%;
+    left: 1%;
     opacity: 1;
   }
 }
@@ -210,15 +210,17 @@ Intro
 #cd-intro {
   position: relative;
   height: 300px;
-  /*background: url(img/intro-background.jpg) no-repeat center center;*/
   background-size: cover;
   overflow: hidden;
+  z-index: -1;
 }
 #cd-intro img {
 	z-index: 0;
 	position: absolute;
 	top: 0;
-	left: 0;	
+	left: 0;
+	min-width: 100%;
+	min-height: 100%;	
 }
 #cd-intro #cd-intro-tagline {
   width: 90%;
@@ -266,36 +268,52 @@ Intro
 	animation-delay: 1s;
 }
 .cd-btn {
-  display: inline-block;
-  background-color: #fff;
-  color: rgb(250, 218, 94);
-  margin-top: 1em;
-  margin-left: 1em;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  vertical-align: middle;
+	display: inline-block;
+	background-color: #fff;
+	margin-top: 1em;
+	margin-left: 1em;
+	border-radius: 50%;
+	width: 40px;
+	height: 40px;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-align: center;
+	vertical-align: middle;
 }
 .cd-btn i {
 	font-size: 20px;
 	display: inline-block;
 	padding: 10px;
+	color: rgb(250, 218, 94) !important;
 }
-.no-touch .cd-btn:hover {
-  background-color: rgb(250, 218, 94);
-  color: #fff;
+.cd-btn:hover {
+	background-color: rgb(250, 218, 94) !important;
 }
-#site-toolbar a:active i {
-	color: rgb(250, 218, 94);
+.cd-btn:hover i {
+  	color: #fff !important;
 }
-#site-toolbar a:focus i {
-	color: rgb(250, 218, 94);
+#site-toolbar-trigger {
+	margin-top: 7px;
 }
+#site-toolbar-trigger:hover, #site-toolbar-trigger:active {
+	color: #fff;
+}
+#site-toolbar-xs ul {
+	background: none;
+	box-shadow: none;
+	border: none;
+	list-style-type: none;
+}
+#site-toolbar-xs ul li a {
+	color: rgb(250, 218, 94) !important;
+	padding: 0;
+}
+#site-toolbar-xs ul li a:hover {
+	color: #fff;
+}
+
 @media only screen and (min-width: 1170px) {
   #site-toolbar.is-hidden {
     /* assign a position fixed and move outside the viewport (on the right) */
@@ -309,7 +327,7 @@ Intro
   }
   #site-toolbar.is-hidden.slide-in {
     /* slide in when the secondary nav gets fixed */
-    right: 5%;
+    right: 1%;
     opacity: 1;
   }
 }
@@ -321,7 +339,7 @@ Secondary Fixed Navigation
 -------------------------------- */
 #site-section-nav {
   position: relative;
-  z-index: 2;
+  z-index: 10;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -364,7 +382,7 @@ Secondary Fixed Navigation
 }
 #site-section-nav li a {
   display: block;
-  padding: 1.6em;
+  padding: 1.2em;
   color: #f0eee1;
 }
 #section-navigation {
@@ -386,7 +404,7 @@ Secondary Fixed Navigation
 	text-align: center;
 }
 #section-navigation ul li {
-	padding: 12px 18px;
+	padding: 12px 0px;
 	position: relative;
 	text-align: center;
 }
@@ -409,7 +427,7 @@ Secondary Fixed Navigation
 	text-decoration: none;
 }	
 #section-navigation ul li a b {
-	font: bold 14px Georgia, "Times New Roman", Times, serif;
+	font: bold 12px Georgia, "Times New Roman", Times, serif;
 	color: #f1f1f1;
 	text-transform: uppercase;
 	padding-bottom: 10px;
@@ -424,14 +442,14 @@ Secondary Fixed Navigation
 }
 @media only screen and (min-width: 1170px) {
   #site-section-nav {
-    z-index: 2;
+    z-index: 10;
     height: 100px;
     background: rgba(255, 255, 255, 0);
     -webkit-transition: height 0.3s;
     -moz-transition: height 0.3s;
     transition: height 0.3s;
     position: absolute;
-    bottom: 2em;
+    top: 35em;
     margin: 0;
     width: 100%;
   }
@@ -461,7 +479,7 @@ Secondary Fixed Navigation
     position: relative;
     text-align: center;
     display: block;
-    padding: 58px 40px 0 40px;
+    padding: 58px 30px 0 30px;
     border-bottom: none;
     -webkit-transition: padding 0.2s;
     -moz-transition: padding 0.2s;
@@ -496,8 +514,11 @@ Secondary Fixed Navigation
   #site-section-nav li a span i {
   	font-size: 30px;
   }
-  #site-section-nav li a:hover b, #site-section-nav li a.active b {
-    color: rgb(250, 218, 94) !important;
+  .site-section-nav-avatar img {
+  	border-radius: 500px;
+  }
+  #site-section-nav li a:hover b, #site-section-nav li a.active b, #site-section-nav li a:active b {
+    color: #fff;
   }
   #site-section-nav li:nth-child(1) a span {
     background-position: 0 0;
@@ -524,7 +545,7 @@ Secondary Fixed Navigation
     width: 100%;
   }
   #site-section-nav.repainted {
-    background: rgba(3, 13, 24, 0.96);
+    background: rgba(51, 41, 36, 0.96);
   }
   #site-section-nav.animate-children {
     /* on Firefox CSS transition/animation fails when parent element changes position attribute*/
@@ -533,6 +554,9 @@ Secondary Fixed Navigation
   }
   #site-section-nav.animate-children li a {
     padding: 15px 30px 0 30px;
+  }
+  #site-section-nav.animate-children li a b {
+  	font-size: 11px;
   }
   #site-section-nav.animate-children li a span {
     opacity: 0;
@@ -552,7 +576,7 @@ Secondary Fixed Navigation
   overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
-  z-index: 2;
+  z-index: 10;
 }
 #site-section-nav-trigger span {
   /* the span element is used to create the menu icon */
